--- a/hello world/index.html
+++ b/hello world/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>Hello World Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1 class="hero">Hello World!</h1>
 </body>
 </html>
+
+
